add filter column

--- a/nbs/tsdataset.ipynb
+++ b/nbs/tsdataset.ipynb
@@ -156,6 +156,8 @@
     "\n",
     "            year_range = [d['year_range'] for d in batch]\n",
     "\n",
+    "            col_indices = [d['col_indices'] for d in batch]\n",
+    "\n",
     "            # Return the collated batch with dynamic padding for tokenized summaries\n",
     "            return dict(\n",
     "                temporal_series=temporal_series,\n",
@@ -210,6 +212,116 @@
    ],
    "source": [
     "show_doc(TimeSeriesLoader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "sector_column_mapping = {\n",
+    "    \"Energy\": [\n",
+    "        'annual_change_in_coal_production__twh', 'annual_change_in_gas_production__twh',\n",
+    "        'annual_change_in_oil_production__twh', 'bioenergy__mtco2', 'coal_production__twh',\n",
+    "        'gas_production_per_capita__kwh', 'hydro_generation__twh', 'nuclear__twh__direct',\n",
+    "        'primary_energy_consumption__twh', 'solar_and_wind__twh__direct'\n",
+    "    ],\n",
+    "    \"LULUCF\": [\n",
+    "        'ag_lnd_agri_k2', 'ag_lnd_arbl_zs', 'forest', 'pasture_area_change', 'cropland_area_change',\n",
+    "        'agriculture_area_change', 'land_use_change_and_forestry_ch4_emissions_per_capita',\n",
+    "        'land_use_change_and_forestry_co2_emissions', 'land_use_change_and_forestry_ghg_emissions',\n",
+    "        'land_use_change_and_forestry_n2o_emissions_per_capita'\n",
+    "    ],\n",
+    "    \"Buildings\": [\n",
+    "        'buildings_ch4_emissions_per_capita', 'buildings_co2_emissions_per_capita',\n",
+    "        'buildings_ghg_emissions_per_capita', 'buildings_n2o_emissions_per_capita',\n",
+    "        'population_density', 'cement_co2_per_capita', 'co2_per_capita'\n",
+    "    ],\n",
+    "    \"Economy-wide\": [\n",
+    "        'population', 'population_density', 'co2_growth_prct', 'ny_gdp_frst_rt_zs', 'ny_gdp_mktp_kd_zg',\n",
+    "        'co2_with_tax_as_share_of_co2', 'co2_intensity__gco2_kwh', 'sp_pop_grow', 'energy_cons_change_twh'\n",
+    "    ],\n",
+    "    \"Water\": [\n",
+    "        'amount_of_water__and_sanitation_related_official_development_assistance_that_is_part_of_a_government_coordinated_spending_plan__current_usd_millions',\n",
+    "        'nlis__population_using_improved_drinking_water_sources__pct', 'population_using_at_least_basic_drinking_water_services__pct',\n",
+    "        'population_using_safely_managed_drinking_water_services__pct', 'water__sanitation_and_hygiene_attributable_dalys__000',\n",
+    "        'water__sanitation_and_hygiene_attributable_dalys_per_100000_capita'\n",
+    "    ],\n",
+    "    \"Urban\": [\n",
+    "        'degurba_l1_population_city_estimates', 'degurba_l1_population_city_share_estimates',\n",
+    "        'degurba_l1_population_town__and__suburbs_share_estimates', 'degurba_l2_population_dense_town_share_estimates',\n",
+    "        'degurba_l2_population_semi_dense_town_share_estimates', 'share_of_urban_population_owid_estimates'\n",
+    "    ],\n",
+    "    \"Transport\": [\n",
+    "        'aviation_and_shipping_ch4_emissions_per_capita', 'aviation_and_shipping_co2_emissions',\n",
+    "        'aviation_and_shipping_ghg_emissions_per_capita', 'registered_vehicles_per_thousand',\n",
+    "        'transport_ch4_emissions_per_capita', 'number_of_registered_vehicles', 'coal_production_per_capita__kwh'\n",
+    "    ],\n",
+    "    \"Public Sector\": [\n",
+    "        'compliance_with_smoke_free_public_transport_law__score', 'public_expenditure_on_education__tanzi__and__schuktnecht__2000',\n",
+    "        'democracy_satisf_claassen', 'democracy_support_claassen', 'democracy_bti', 'exec_recopen_polity'\n",
+    "    ],\n",
+    "    \"Health\": [\n",
+    "        'cantril_ladder_score', 'life_expectancy', 'illiterate', 'literacy_rates__world_bank__cia_world_factbook__and_other_sources',\n",
+    "        'suffering_index', 'struggling_index', 'years_of_education_gini'\n",
+    "    ],\n",
+    "    \"Environment\": [\n",
+    "        'co2_with_ets_as_share_of_co2', 'co2_with_tax_as_share_of_co2', 'concentrations_of_fine_particulate_matter__pm2_5',\n",
+    "        'plastic_waste', 'sdg_6_3_1_proportion_of_safely_treated_domestic_wastewater_flows__pct',\n",
+    "        'total_emissions__mtco2', 'population_using_at_least_basic_drinking_water_services__pct'\n",
+    "    ],\n",
+    "    \"Agriculture\": [\n",
+    "        'agriculture_area', 'agriculture_area_change', 'cereal_yield', 'cereals_yield', 'fruit_yield',\n",
+    "        'tomato_yield', 'roots_and_tubers_yield', 'agriculture_ch4_emissions', 'agriculture_n2o_emissions',\n",
+    "        'pulses_yield'\n",
+    "    ],\n",
+    "    \"Industry\": [\n",
+    "        'industry_ch4_emissions_per_capita', 'industry_co2_emissions_per_capita', 'industry_fgas_emissions',\n",
+    "        'industry_ghg_emissions_per_capita', 'manufacturing_and_construction_ch4_emissions_per_capita',\n",
+    "        'manufacturing_and_construction_n2o_emissions_per_capita', 'industry_n2o_emissions_per_capita'\n",
+    "    ],\n",
+    "    \"Tourism\": [\n",
+    "        'tourism_share_gdp', 'in_tour_regions_americas', 'in_tour_regions_europe', 'import_total_mot',\n",
+    "        'import_total_mot_per_capita', 'net_export', 'net_export_per_capita'\n",
+    "    ],\n",
+    "    \"Waste\": [\n",
+    "        'waste_ch4_emissions_per_capita', 'waste_ghg_emissions_per_capita', 'waste_n2o_emissions_per_capita',\n",
+    "        'total_emissions__mtco2', 'sdg_14_40_pct_ex_c', 'sdg_14_40_nr_in'\n",
+    "    ],\n",
+    "    \"Coastal zones\": [\n",
+    "        'average_area_km2_estimates', 'ifl_area', 'total_area_km2_estimates', 'co2_intensity__gco2_kwh',\n",
+    "        'concentrations_of_fine_particulate_matter__pm2_5'\n",
+    "    ],\n",
+    "    \"Cross Cutting Area\": [\n",
+    "        'population_with_basic_education', 'population_using_safely_managed_drinking_water_services__pct',\n",
+    "        'population_using_at_least_basic_drinking_water_services__pct', 'mf_youth_and_adults__15_64_years__percentage_of_no_education',\n",
+    "        'primary_energy_consumption__twh', 'total_area_km2_estimates', 'nlis__population_using_improved_drinking_water_sources__pct'\n",
+    "    ],\n",
+    "    \"Disaster Risk Management (Drm)\": [\n",
+    "        'regime_dich_ert', 'regime_trich_ert', 'struggling_index', 'suffering_index', 'average_area_km2_estimates'\n",
+    "    ],\n",
+    "    \"Finance\": [\n",
+    "        'ny_gdp_mktp_kd_zg', 'ny_adj_aedu_gn_zs', 'ny_adj_dmin_cd', 'nlis__population_using_improved_drinking_water_sources__pct',\n",
+    "        'amount_of_water__and_sanitation_related_official_development_assistance_that_is_part_of_a_government_coordinated_spending_plan__current_usd_millions'\n",
+    "    ],\n",
+    "    \"Rural\": [\n",
+    "        'sp_rur_totl_zg', 'sp_rur_totl_zs', 'agriculture_area_change', 'population_density', 'population'\n",
+    "    ],\n",
+    "    \"Social development\": [\n",
+    "        'democracy_satisf_claassen', 'democracy_support_claassen', 'no_formal_education', 'mf_tertiary_enrollment_rates_combined_wb',\n",
+    "        'mf_youth_and_adults__15_64_years__average_years_of_education', 'democracy_bti', 'share'\n",
+    "    ],\n",
+    "    \"Adaptation\": [\n",
+    "        'energy_cons_change_pct', 'energy_cons_change_twh', 'primary_energy_consumption__twh',\n",
+    "        'population_density', 'agriculture_ghg_emissions'\n",
+    "    ],\n",
+    "    \"Residential and Commercial\": [\n",
+    "        'buildings_co2_emissions_per_capita', 'buildings_ch4_emissions_per_capita', 'buildings_n2o_emissions_per_capita',\n",
+    "        'buildings_ghg_emissions_per_capita', 'registered_vehicles_per_thousand', 'population_density'\n",
+    "    ]\n",
+    "}"
    ]
   },
   {
@@ -284,8 +396,19 @@
     "        anchor_summary = self.clean_text(data['anchor_summary'])\n",
     "        country = data['country']\n",
     "        columns = data['columns']\n",
-    "        sector_str = data['sector']  # This is a string representation of sectors\n",
+    "        sector_str = data['sector']\n",
     "        year_range = data['year_range']\n",
+    "\n",
+    "        # Retrieve column indices related to all sectors in sector_list\n",
+    "        column_indices = set()\n",
+    "        for sector in sector_str:\n",
+    "            sector_columns = sector_column_mapping.get(sector, [])\n",
+    "            for col in sector_columns:\n",
+    "                if col in columns:\n",
+    "                    column_indices.add(columns.index(col))\n",
+    "\n",
+    "        # Convert the set of indices to a sorted list\n",
+    "        column_indices = sorted(list(column_indices))\n",
     "\n",
     "        # Manually add the BOS and EOS tokens to the input summary\n",
     "        # bos_token = self.tokenizer.bos_token or self.tokenizer.cls_token  # Default to CLS if BOS isn't defined\n",
@@ -315,7 +438,8 @@
     "            'attention_mask': attention_mask,    # Attention mask (if applicable)\n",
     "            'country': country,                  # Static feature (country)\n",
     "            'temporal_cols': columns,            # Names of temporal features\n",
-    "            'year_range': year_range\n",
+    "            'year_range': year_range,\n",
+    "            'col_indices': column_indices\n",
     "        }\n",
     "    \n",
     "    def __repr__(self):\n",
