export col_indices

--- a/nbs/tsdataset.ipynb
+++ b/nbs/tsdataset.ipynb
@@ -166,7 +166,8 @@
     "                attention_mask=attention_mask,\n",
     "                country=country,\n",
     "                temporal_cols=temporal_cols,\n",
-    "                year_range=year_range\n",
+    "                year_range=year_range,\n",
+    "                col_indices=col_indices\n",
     "            )\n",
     "\n",
     "        # Raise error if an unsupported data type is passed\n",
