--- a/nbs/tsdataset.ipynb
+++ b/nbs/tsdataset.ipynb
@@ -659,22 +659,22 @@
     "        \"\"\"\n",
     "        Creates and returns a DataLoader for the training dataset.\n",
     "        \"\"\"\n",
-    "        # sampler = LengthBasedBatchSampler(self.train_dataset, batch_size=self.batch_size, sort_key='summary_input_ids')\n",
-    "        loader = TimeSeriesLoader(\n",
-    "            self.train_dataset,\n",
-    "            tokenizer=self.tokenizer,  # Pass the tokenizer\n",
-    "            batch_size=self.batch_size, \n",
-    "            num_workers=self.num_workers,\n",
-    "            shuffle=self.shuffle_train,\n",
-    "            # batch_sampler=sampler,\n",
-    "            drop_last=self.drop_last\n",
-    "        )\n",
+    "        sampler = LengthBasedBatchSampler(self.train_dataset, batch_size=self.batch_size, sort_key='summary_input_ids')\n",
     "        # loader = TimeSeriesLoader(\n",
     "        #     self.train_dataset,\n",
-    "        #     tokenizer=self.tokenizer,\n",
+    "        #     tokenizer=self.tokenizer,  # Pass the tokenizer\n",
+    "        #     batch_size=self.batch_size, \n",
     "        #     num_workers=self.num_workers,\n",
-    "        #     batch_sampler=sampler\n",
+    "        #     shuffle=self.shuffle_train,\n",
+    "        #     # batch_sampler=sampler,\n",
+    "        #     drop_last=self.drop_last\n",
     "        # )\n",
+    "        loader = TimeSeriesLoader(\n",
+    "            self.train_dataset,\n",
+    "            tokenizer=self.tokenizer,\n",
+    "            num_workers=self.num_workers,\n",
+    "            batch_sampler=sampler\n",
+    "        )\n",
     "        return loader\n",
     "    \n",
     "    def val_dataloader(self):\n",
