--- a/nbs/tsdataset.ipynb
+++ b/nbs/tsdataset.ipynb
@@ -338,6 +338,7 @@
     "                 tokenizer,  # Tokenizer for summarizing text (e.g., from HuggingFace's Transformers library)\n",
     "                 max_length: int = 512,  # Max token length for tokenization\n",
     "                 sorted=False,  # Whether the dataset is already sorted\n",
+    "                 mode='train',\n",
     "                 add_attention_mask: bool = True  # Whether to include attention mask for tokenized summaries\n",
     "                ):\n",
     "        \"\"\"\n",
@@ -364,13 +365,19 @@
     "        self.sorted = sorted\n",
     "        self.add_attention_mask = add_attention_mask\n",
     "        \n",
-    "        # Filter out data entries with tokenized summary lengths < 100\n",
-    "        self.data_list = [\n",
-    "            data for data in data_list \n",
-    "            if len(tokenizer(data['anchor_summary'], max_length=max_length, truncation=True)['input_ids']) >= 100\n",
-    "        ]\n",
+    "        if mode == 'train':\n",
+    "            # Filter out data entries with tokenized summary lengths < 100\n",
+    "            self.data_list = [\n",
+    "                data for data in data_list \n",
+    "                if len(tokenizer(data['anchor_summary'], max_length=max_length, truncation=True)['input_ids']) >= 100\n",
+    "            ]\n",
     "\n",
-    "        self.n_groups = len(self.data_list)  # Update the count after filtering\n",
+    "            self.n_groups = len(self.data_list)  # Update the count after filtering\n",
+    "\n",
+    "        else:\n",
+    "            self.n_groups = len(self.data_list)  # Update the count after filtering\n",
+    "\n",
+    "\n",
     "\n",
     "    def clean_text(self, text):\n",
     "        # Remove duplicate spaces and newlines\n",
@@ -462,7 +469,7 @@
     "        )\n",
     "    \n",
     "    @staticmethod\n",
-    "    def from_jsonl(file_path, tokenizer, max_length=512, sorted=False, add_attention_mask=True):\n",
+    "    def from_jsonl(file_path, tokenizer, max_length=512, sorted=False, add_attention_mask=True, mode='train'):\n",
     "        \"\"\"\n",
     "        Static method to load time series data from a JSONL file.\n",
     "        \n",
@@ -488,7 +495,8 @@
     "            tokenizer=tokenizer,\n",
     "            max_length=max_length,\n",
     "            sorted=sorted,\n",
-    "            add_attention_mask=add_attention_mask\n",
+    "            add_attention_mask=add_attention_mask,\n",
+    "            mode=mode\n",
     "        )"
    ]
   },
